fix(breadcrumbs):overflow

--- a/src/shared/ui/Breadcrumbs/styles.scss
+++ b/src/shared/ui/Breadcrumbs/styles.scss
@@ -4,7 +4,7 @@
 		display: flex;
 		align-items: center;
 		gap: 20px;
-		overflow-x: scroll;
+		overflow-x: auto;
 	}
 
 	&__item {
